# python-project-lvl4

./: .gitignore  Procfile  README.md  pyproject.toml
.github/workflows/: hexlet-check.yml
locale/en/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py  0003_alter_label_name.py
task_manager/statuses/: models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py  0003_alter_status_name.py
task_manager/tasks/: filter.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_auto_20211030_1518.py  0003_alter_task_status.py  0004_task_labels.py  0005_auto_20211106_1503.py  0006_auto_20211106_1846.py  0007_rename_labels_task_label.py  0008_rename_label_task_labels.py
task_manager/users/: models.py  urls.py  views.py
templates/: base.html  create_user.html  index.html  login_user.html  update_status.html  update_user.html  user_list.html
templates/labels/: create_label.html  delete_label.html  label_list.html  update_label.html
templates/statuses/: create_status.html  delete_status.html  status_list.html  update_status.html
templates/tasks/: create_task.html  delete_task.html  task.html  task_list.html  update_task.html
templates/users/: create_user.html  delete_user.html  login_user.html  update_user.html  user_list.html
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
(+2 files in other folders)
