[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Dmitrij Svetov <bandodok@gmail.com>"]
packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "3.9.5"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
django-bootstrap4 = "^3.0.1"
django-extensions = "^3.1.3"
psycopg2-binary = "^2.9.1"
django-filter = "^21.1"
rollbar = "^0.16.2"
dj-database-url = "^0.5.0"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
